--- a/Lab 1/index.html
+++ b/Lab 1/index.html
@@ -3,39 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Projeto CG</title>
 </head>
 <body>
-    <div>
-        <h1>Informe os pontos</h1>
-        <div>
-            <label for="x">x</label>
-            <input id="x" type="text">
-        </div>
-        <div>
-            <label for="xMax">xMax</label>
-            <input id="xMax" type="text">
-        </div>
-        <div>
-            <label for="xMin">xMin</label>
-            <input id="xMin" type="text">
-        </div>
-        <div>
-            <label for="y">y</label>
-            <input id="y" type="text">
-        </div>
-        <div>
-            <label for="yMax">yMax</label>
-            <input id="yMax" type="text">
-        </div>
-        <div>
-            <label for="yMin">yMin</label>
-            <input id="yMin" type="text">
-        </div>
-
-        <div>
-            <button id="desenhar">Desenhar</button>
-        </div>
+    <div class="container">
+        <section class="continput"> 
+            <h1>Informe os pontos</h1>
+            <div class="input">
+                <label for="x">x</label>
+                <input id="x" type="text">
+            </div>
+            <div class="input">
+                <label for="xMax">xMax</label>
+                <input id="xMax" type="text">
+            </div>
+            <div class="input">
+                <label for="xMin">xMin</label>
+                <input id="xMin" type="text">
+            </div>
+            <div class="input">
+                <label for="y">y</label>
+                <input id="y" type="text">
+            </div>
+            <div class="input">
+                <label for="yMax">yMax</label>
+                <input id="yMax" type="text">
+            </div>
+            <div class="input">
+                <label for="yMin">yMin</label>
+                <input id="yMin" type="text">
+            </div>
+            <div class="btn">
+                <button id="desenhar">Desenhar</button>
+            </div>
+        </section>
+        
 
         <div id="plano">
 
