Info dos resultados

--- a/Lab 1/index.html
+++ b/Lab 1/index.html
@@ -37,7 +37,13 @@
             <div class="btn">
                 <button id="desenhar">Desenhar</button>
             </div>
+            <div class="contAnalise">
+                <div id="inp_to_ndc_info" class="calcInfo"></div>
+                <div id="ndc_to_dc_info" class="calcInfo"></div>
+                <div id="inp_to_dc_info" class="calcInfo"></div>
+            </div>
         </section>
+        
         
 
         <div id="plano">
