--- a/Lab 2/PMC/index.html
+++ b/Lab 2/PMC/index.html
@@ -13,8 +13,14 @@
 <body>
 <h1>Desenhar Circunferência</h1>
 <form id="coordinatesForm">
-    <label for="raio">Raio:</label>
-    <input type="number" id="raio" name="raio" required>
+    <label for="centerX">Coordenada X do Centro:</label>
+    <input type="number" id="centerX" name="centerX" required>
+    <br>
+    <label for="centerY">Coordenada Y do Centro:</label>
+    <input type="number" id="centerY" name="centerY" required>
+    <br>
+    <label for="radius">Raio:</label>
+    <input type="number" id="radius" name="radius" required>
     <br>
     <button type="submit">Desenhar Circunferência</button>
 </form>
@@ -27,27 +33,18 @@
 
     form.addEventListener('submit', (e) => {
         e.preventDefault();
-        const raio = parseInt(form.elements.raio.value);
-        drawCircle(raio);
+        const centerX = parseInt(form.elements.centerX.value);
+        const centerY = parseInt(form.elements.centerY.value);
+        const radius = parseInt(form.elements.radius.value);
+        drawCircle(centerX, centerY, radius);
     });
 
-    function ponto_circulo(x, y) {
-        ctx.fillRect(x, y, 1, 1); // Desenha um ponto na posição (x, y) no canvas
-        ctx.fillRect(y, x, 1, 1); // Desenha um ponto na posição (y, x) no canvas
-        ctx.fillRect(y, -x, 1, 1); // Desenha um ponto na posição (y, -x) no canvas
-        ctx.fillRect(x, -y, 1, 1); // Desenha um ponto na posição (x, -y) no canvas
-        ctx.fillRect(-x, -y, 1, 1); // Desenha um ponto na posição (-x, -y) no canvas
-        ctx.fillRect(-y, -x, 1, 1); // Desenha um ponto na posição (-y, -x) no canvas
-        ctx.fillRect(-y, x, 1, 1); // Desenha um ponto na posição (-y, x) no canvas
-        ctx.fillRect(-x, y, 1, 1); // Desenha um ponto na posição (-x, y) no canvas
-    }
-
-    function drawCircle(raio) {
+    function drawCircle(centerX, centerY, radius) {
         let x = 0;
-        let y = raio;
-        let d = 5 / 4 - raio;
+        let y = radius;
+        let d = 5 - 4 * radius;
 
-        ponto_circulo(x, y);
+        ponto_circulo(centerX, centerY, x, y);
 
         while (y > x) {
             if (d < 0) {
@@ -57,8 +54,20 @@
                 y--;
             }
             x++;
-            ponto_circulo(x, y);
+            ponto_circulo(centerX, centerY, x, y);
         }
+    }
+
+    function ponto_circulo(centerX, centerY, x, y) {
+        ctx.fillStyle = 'black';
+        ctx.fillRect(centerX + x, centerY + y, 1, 1);
+        ctx.fillRect(centerX + y, centerY + x, 1, 1);
+        ctx.fillRect(centerX + y, centerY - x, 1, 1);
+        ctx.fillRect(centerX + x, centerY - y, 1, 1);
+        ctx.fillRect(centerX - x, centerY - y, 1, 1);
+        ctx.fillRect(centerX - y, centerY - x, 1, 1);
+        ctx.fillRect(centerX - y, centerY + x, 1, 1);
+        ctx.fillRect(centerX - x, centerY + y, 1, 1);
     }
 </script>
 </body>
